foo-corp/namespaces/online/app1-backend/app1-dev/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-privilege-escalation
  labels:
    app: nginx-privilege-escalation
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        cpu: "200m"
        memory: "200m"
      requests:
        cpu:    "100m"
        memory: "100m"
    ports:
    - containerPort: 80
    securityContext:
      allowPrivilegeEscalation: false
