foo-corp/namespaces/online/app1-backend/app1-dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  labels:
    app: nginx
  name: nginx
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
